# myopta

./: CMakeLists.txt  README.md  style.sh
include/: crossover.h  ga.h  misc.h  myopta.h  pool.h  rand.h
src/: crossover.cc  evaluator.cc  ga.cc  problem.cc
test/: crossover.cc  evaluator.cc  ga.cc  helper.h  misc.cc  pool.cc  problem.cc
